--- a/404.html
+++ b/404.html
@@ -53,7 +53,7 @@
     <div class="bg-light-silver">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
-    <a href="http://abirdinthecity.de/" class="f3 fw2 hover-white no-underline white-90 dib">
+    <a href="https://abirdinthecity.de/" class="f3 fw2 hover-white no-underline white-90 dib">
       A bird in the city
     </a>
     <div class="flex-l items-center">
@@ -111,7 +111,7 @@
     </main>
     <footer class="bg-light-silver bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
-  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://abirdinthecity.de/" >
+  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="https://abirdinthecity.de/" >
     &copy; 2019 A bird in the city
   </a>
     <div>
@@ -124,7 +124,7 @@
 
 
 </div>
-  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://abirdinthecity.de//imprint.html" >
+  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="https://abirdinthecity.de//imprint.html" >
     Imprint
   </a>
   </div>
